tests/baselines/reference/tsxSpreadAttributesResolution16.errors.txt
file.tsx(11,10): error TS2741: Property 'AnotherProperty1' is missing in type '{ property1: string; property2: number; }' but required in type 'AnotherComponentProps'.


==== file.tsx (1 errors) ====
    import React = require('react');
    
    interface ComponentProps {
        property1: string;
        property2: number;
    }
    
    export default function Component(props: ComponentProps) {
        return (
            // Error: missing property
            <AnotherComponent {...props} />
             ~~~~~~~~~~~~~~~~
!!! error TS2741: Property 'AnotherProperty1' is missing in type '{ property1: string; property2: number; }' but required in type 'AnotherComponentProps'.
!!! related TS2728 file.tsx:17:5: 'AnotherProperty1' is declared here.
        );
    }
    
    interface AnotherComponentProps {
        property1: string;
        AnotherProperty1: string;
        property2: boolean;
    }
    
    function AnotherComponent({ property1 }: AnotherComponentProps) {
        return (
            <span>{property1}</span>
        );
    }